--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -2,5 +2,5 @@
 <p>Useful things. Probably.</p>
 
 <ul>
-  <li><%= link_to "User Permissions", url_for(:controller => :admin, :action => :user_permissions) %></li>
+  <li><%= link_to 'User Permissions', url_for(controller: :admin, action: :user_permissions) %></li>
 </ul>
