--- a/app/views/admin/user_permissions.html.erb
+++ b/app/views/admin/user_permissions.html.erb
@@ -5,7 +5,7 @@
   <tr>
     <th>Id</th>
     <th>User</th>
-    <% @roles.map {|r| r.to_s.humanize.titlecase }.each do |role_name| %>
+    <% @roles.map { |r| r.to_s.humanize.titlecase }.each do |role_name| %>
         <th><%= role_name %></th>
     <% end %>
     <tr>
@@ -15,7 +15,12 @@
           <td><%= user.id %></td>
           <td><%= sanitize user.username %></td>
           <% @roles.each do |role| %>
-              <td><label class="permissions-checkbox-label"><%= check_box_tag "#{user.id}[#{role.to_s}]", "foo", user.has_cached_role?(role), disabled: (role == :developer and not user.has_cached_role?(role)), class: "permissions-checkbox", data: {:user_id => user.id, :role => role.to_s } %></label></td>
+              <td>
+                <label class="permissions-checkbox-label"><%= check_box_tag "#{user.id}[#{role}]", 'foo', user.has_cached_role?(role),
+                                                                            disabled: (role == :developer and !user.has_cached_role?(role)),
+                                                                            class: 'permissions-checkbox', data: { user_id: user.id, role: role.to_s } %>
+                </label>
+              </td>
           <% end %>
         </tr>
     <% end %>
