--- a/app/views/authentication/dev_login.html.erb
+++ b/app/views/authentication/dev_login.html.erb
@@ -14,16 +14,16 @@
       <tr>
         <td><%= user.username %></td>
         <td><%= user.stack_exchange_account_id %></td>
-        <td><%= link_to "Login", dev_login_path(:account_id => user.stack_exchange_account_id), :method => :post %></td>
+        <td><%= link_to 'Login', dev_login_path(account_id: user.stack_exchange_account_id), method: :post %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<%= form_tag dev_login_path, :class => "form-inline" do %>
+<%= form_tag dev_login_path, class: 'form-inline' do %>
   <div class="form-group">
     <%= label_tag :account_id %>
-    <%= text_field_tag :account_id, "", :class => "form-control" %>
+    <%= text_field_tag :account_id, '', class: 'form-control' %>
   </div>
-  <%= submit_tag "Create account", :class => "form-control btn btn-primary" %>
+  <%= submit_tag 'Create account', class: 'form-control btn btn-primary' %>
 <% end %>
