--- a/app/views/bot_instances/_form.html.erb
+++ b/app/views/bot_instances/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(bot_instance, url: url) do |f| %>
   <% if bot_instance.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(bot_instance.errors.count, "error") %> prohibited this bot from being saved:</h2>
+      <h2><%= pluralize(bot_instance.errors.count, 'error') %> prohibited this bot from being saved:</h2>
 
       <ul>
         <% bot_instance.errors.full_messages.each do |message| %>
@@ -11,18 +11,18 @@
     </div>
   <% end %>
 
-  <p><strong>Bot:</strong><br/>
+  <p><strong>Bot:</strong><br>
   <%= render 'bots/bot', bot: Bot.find(params[:bot_id]) %></p>
 
-  <p><strong>Owner:</strong><br/> <%= bot_instance.user.present? ? bot_instance.user.username : current_user.username %></p>
+  <p><strong>Owner:</strong><br> <%= bot_instance.user.present? ? bot_instance.user.username : current_user.username %></p>
 
   <div class="field">
-    <%= f.label :location %><br/>
+    <%= f.label :location %><br>
     <span class="text-muted"><em>Something that describes where this instance is running, e.g. <code>EC2</code></em></span>
-    <%= f.text_field :location, :class => "form-control" %>
-  </div><br/>
+    <%= f.text_field :location, class: 'form-control' %>
+  </div><br>
 
   <div class="actions">
-    <%= f.submit "Save", :class => "btn btn-primary" %>
+    <%= f.submit 'Save', class: 'btn btn-primary' %>
   </div>
 <% end %>
