--- a/app/views/bot_instances/edit.html.erb
+++ b/app/views/bot_instances/edit.html.erb
@@ -1,10 +1,11 @@
 <h3>Edit bot instance</h3>
 
-<%= render 'form', bot_instance: @bot_instance, url: url_for(controller: :bot_instances, action: :update, bot_id: params[:bot_id], id: @bot_instance.id) %>
+<%= render 'form', bot_instance: @bot_instance,
+                   url: url_for(controller: :bot_instances, action: :update, bot_id: params[:bot_id], id: @bot_instance.id) %>
 
-<br/>
+<br>
 
 <% if current_user == @bot_instance.user || current_user.is_admin? %>
-  <p><%= link_to "Destroy", url_for(controller: :bot_instances, action: :destroy, bot_id: params[:bot_id], id: @bot_instance.id),
-              method: :delete, class: "text-danger", data: { confirm: "Are you sure you want to do this?" } %></p>
+  <p><%= link_to 'Destroy', url_for(controller: :bot_instances, action: :destroy, bot_id: params[:bot_id], id: @bot_instance.id),
+                 method: :delete, class: 'text-danger', data: { confirm: 'Are you sure you want to do this?' } %></p>
 <% end %>
