--- a/app/views/bots/add_collaborator.js.erb
+++ b/app/views/bots/add_collaborator.js.erb
@@ -1,4 +1,4 @@
-$("table#collaborators-table tbody").append("<%= escape_javascript(render 'collaborator', :user => @collaborator, :bot => @bot) %>")
+$("table#collaborators-table tbody").append("<%= escape_javascript(render('collaborator', user: @collaborator, bot: @bot)) %>")
 
 $("select.add-collaborator-picker option[value='<%= @collaborator.id %>']").remove()
 $(".add-collaborator-picker").selectpicker('refresh')
