--- a/app/views/bots/edit.html.erb
+++ b/app/views/bots/edit.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', bot: @bot %>
 
-<%= link_to 'Destroy', @bot, :method => :delete, :data => { :confirm => "Are you sure you want to do this?" } %>
+<%= link_to 'Destroy', @bot, method: :delete, data: { confirm: 'Are you sure you want to do this?' } %>
