--- a/app/views/bots/show.html.erb
+++ b/app/views/bots/show.html.erb
@@ -1,4 +1,4 @@
-<h3><%= @bot.name %><br/>
+<h3><%= @bot.name %><br>
 <small>by <%= @bot.owner.username %></small></h3>
 
 <p class="text-muted"><%= @bot.description %></p>
@@ -12,15 +12,15 @@
   <% end %>
 </ul>
 
-<strong><%= link_to "Instances", url_for(controller: :bot_instances, action: :index, bot_id: @bot.id) %></strong>
+<strong><%= link_to 'Instances', url_for(controller: :bot_instances, action: :index, bot_id: @bot.id) %></strong>
 <ul>
   <% @bot.bot_instances.each do |instance| %>
-    <%= render 'bot_instances/list_item', :instance => instance %>
+    <%= render 'bot_instances/list_item', instance: instance %>
   <% end %>
 </ul>
 
 <% if user_signed_in? && (current_user.is_owner? @bot || current_user.is_admin?) %>
-  <%= link_to "Edit", url_for(:controller => :bots, :action => :edit, :id => @bot.id) %> &middot;
-  <%= link_to "Delete", url_for(:controller => :bots, :action => :destroy, :id => @bot.id), :class => "text-danger",
-              :method => :delete, :data => { :confirm => "Are you sure you want to do this?" } %>
+  <%= link_to 'Edit', url_for(controller: :bots, action: :edit, id: @bot.id) %> &middot;
+  <%= link_to 'Delete', url_for(controller: :bots, action: :destroy, id: @bot.id),
+              class: 'text-danger', method: :delete, data: { confirm: 'Are you sure you want to do this?' } %>
 <% end %>
