--- a/app/views/code_status/index.html.erb
+++ b/app/views/code_status/index.html.erb
@@ -1,25 +1,39 @@
 <%= stylesheet_link_tag \
-  "https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/styles/github.min.css",
-  "https://cdn.rawgit.com/rtfpessoa/diff2html/01c0f152/dist/diff2html.min.css"
-%>
+      'https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/styles/github.min.css',
+      'https://cdn.jsdelivr.net/gh/rtfpessoa/diff2html@01c0f152/dist/diff2html.min.css' %>
 <%= javascript_include_tag \
-  "https://cdn.rawgit.com/rtfpessoa/diff2html/01c0f152/dist/diff2html.min.js",
-  "https://cdn.rawgit.com/rtfpessoa/diff2html/01c0f152/dist/diff2html-ui.min.js",
-  "https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js"
-%>
+      'https://cdn.jsdelivr.net/gh/rtfpessoa/diff2html@01c0f152/dist/diff2html.min.js',
+      'https://cdn.jsdelivr.net/gh/rtfpessoa/diff2html@01c0f152/dist/diff2html-ui.min.js',
+      'https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js' %>
 
-<details open><summary class="h3">Revision <%= link_to "https://github.com/SOBotics/Redunda/commit/#{CurrentCommit}" do %><code><%= CurrentCommit.first(7) %></code><% end %></summary>
+<details open><summary class="h3">Revision <code><%= CurrentCommit&.first(7) %></code></summary>
   <div>
-    <p>This commit is <span class="fill-status">… commits ahead, … commits behind</span> the <code><%= link_to "...", "", class: "fill-branch" %></code> branch. <%= link_to " diff", "#", id: "toggle-compare-diff", class: "diff-toggle" %> | <%= link_to " commit diff", "#", id: "toggle-commit-diff", class: "diff-toggle" %></p>
-    <details class="commit"><summary>Loading commit info…</summary>
-      <pre></pre>
-    </details>
+    <p>
+      <%= link_to 'This commit', "https://github.com/Charcoal-SE/metasmoke/commit/#{CurrentCommit}" %>
+      is
+      <span class="fill-status">… commits ahead, … commits behind</span>
+      the
+      <code><%= link_to '...', '', class: 'fill-branch' %></code>
+      branch.
+      <%= link_to ' diff', '#', id: 'toggle-compare-diff', class: 'diff-toggle' %>
+      |
+      <%= link_to ' commit diff', '#', id: 'toggle-commit-diff', class: 'diff-toggle' %>
+      <% if current_user&.has_role?(:developer) %>
+        |
+        <%= link_to 'Trigger deploy', developer_deploy_path, method: :post, data: { confirm: 'Sure you want to deploy master?' }, class: 'text-danger' %>
+      <% end %>
+  </p>
+    <blockquote class="commit">
+      <details><summary>Loading commit info…</summary>
+        <pre></pre>
+      </details>
+    </blockquote>
     <section class="commit-diff hide"></section>
     <section class="compare-diff hide"></section>
   </div>
 </details>
 
-<details open><summary class="h3">Versions <%= link_to "Show ", "#", :id => "show-all-gem-versions" %></summary>
+<details open><summary class="h3">Versions <%= link_to 'Show ', '#', id: 'show-all-gem-versions' %></summary>
 
 <table class="table" id="gems-versions-table">
   <thead>
@@ -30,8 +44,8 @@
   </thead>
   <tbody>
     <tr>
-      <td><%= link_to "Ruby", "https://www.ruby-lang.org/en/" %></td>
-      <td><%= link_to RUBY_VERSION, "http://ruby-doc.org/core-#{RUBY_VERSION}/", title: "Ruby docs" %></td>
+      <td><%= link_to 'Ruby', 'https://www.ruby-lang.org/en/' %></td>
+      <td><%= link_to RUBY_VERSION, "http://ruby-doc.org/core-#{RUBY_VERSION}/", title: 'Ruby docs' %></td>
     </tr>
     <% @gem_versions.each do |g| %>
       <tr class="<% if !@important_gems.include? g.name %>minor hide<% end %>">
