--- a/app/views/bot_instances/index.html.erb
+++ b/app/views/bot_instances/index.html.erb
@@ -54,7 +54,7 @@
   <% end %>
 </ul>
 
-# Next line doesn't use the generated role helpers like user.is_owner?(bot) because it's more efficient to do it all in one query. %>
+<%# Next line doesn't use the generated role helpers like user.is_owner?(bot) because it's more efficient to do it all in one query. %>
 <% if user_signed_in? && (current_user.has_any_role?({:name => :owner, :resource => @bot}, {:name => :collaborator, :resource => @bot}, {:name => :admin})) %>
   <%= link_to 'Create New', new_bot_bot_instance_path %>
 <% end %>
