--- a/app/views/bots/show.html.erb
+++ b/app/views/bots/show.html.erb
@@ -4,7 +4,9 @@
   <ul class="nav nav-tabs">
     <% @bot_instances.each do |instance| %>
       <li class="<%= 'active' if @bot_instance.id == instance.id %>">
-        <%= link_to instance.location, url_for(controller: :bots, action: :show, instance: instance.id) %>
+        <% instance_name = instance.location %>
+        <% instance_name += '&nbsp;<span class="label label-primary">Standby</span>' if instance != instance.bot.preferred_instance %>
+        <%= link_to instance_name.html_safe, url_for(controller: :bots, action: :show, instance: instance.id) %>
       </li>
     <% end %>
   </ul>
